<resources>
    <string name="app_name">SharedPreferenceKelompokTiga</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Sign in</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="regist">Regist</string>
    <string name="logout">Logout</string>
</resources>